<resources>

    <string name="app_name">紫冬口译</string>
    <string name="menu_settings">Settings</string>
    <string name="app_run_tip">正在运行 </string>
    <string name="host_wan_net">s2s.simutalk.com</string>
    
<!-- 
    <string name="host_ip">192.168.74.4</string>
    <string name="file_host_ip">192.168.74.4</string>
 -->    
 <!--
    <string name="host_ip">192.168.74.117:8080</string>
    <string name="file_host_ip">192.168.74.117:8080</string>
  -->    
  	<!-- <string name="host_ip">159.226.20.193</string>-->
    <string name="host_ip">app.simutalk.com:8081</string> 
    <string name="file_host_ip">app.simutalk.com:8081</string>

    <string name="btnToHost">http://www.ztspeech.com</string>
    <string name="host_ch_update">http://app.simutalk.com/speechtrans/apk_version2.txt</string>
    <string name="help_url">http://app.simutalk.com/speechtrans/help2_mobile.html</string>
    <string name="qa_btn_fish">捞问题</string>
    <string name="waiting_title">请稍后</string>
    <string name="btn_close">返回</string>
    <string name="lbl_help_title_text">帮助</string>
    <string name="btn_set_name">确定</string> 
    <string name="lbl_set_name">我的昵称：</string>
    <string name="btn_trans">翻译</string>
    <string name="share_text">好用的口语翻译帮手，来http://app.simutalk.com 免费下载吧(来自@紫冬口译)</string>

    <!-- 数据库初始化提示 -->
    <string name="dbInit_Successfull">数据初始化完成</string>
    <string name="dbInit_fail">数据初始化失败</string>
    <!-- 查询提示 -->
    <string name="search_chAndEn">请不要中英文混合输入</string>
    <!-- 分页提示 -->
    <string name="lisview_footer_textview">更多...</string>
    <!-- 设置界面 各preference key值 -->
    <string name="setting_listpreference_choselanguage">setting_listpreference_choselanguage</string>
    <!-- 语言 -->
    <string name="setting_checkboxpreference_translate">setting_checkboxpreference_translate</string>
    <!-- 翻译对话 -->
    <string name="setting_checkboxpreference_translatetalk">setting_checkboxpreference_translatetalk</string>
    <!-- 运行 -->
    <string name="setting_checkboxpreference_run">setting_checkboxpreference_run</string>
    <!-- 是否翻译 -->
    <string name="setting_checkboxpreference_autoplay">setting_checkboxpreference_autoplay</string>
    <!-- 是否自动播放 -->
    <string name="setting_checkboxpreference_tts">setting_checkboxpreference_tts</string>
    <!-- 是否TTS -->
    <string name="setting_edittextpreference_nikename">setting_edittextpreference_nikename</string>
    <!-- 昵称 -->
    <string name="setting_listpreference_ttsspeed">setting_listpreference_ttsspeed</string>
    <!-- 是否TTS -->
    <string name="setting_listpreference_fontsize">setting_listpreference_fontsize</string>
    <!-- 字体 -->
    <string name="setting_listpreference_ttssex">setting_listpreference_ttssex</string>
    <!-- 自动跳转 -->
    <string name="setting_checkboxpreference_autojump">setting_checkboxpreference_autojump</string>
    <!-- 男发音女发音 -->
    <string name="setting_checkboxpreference_longclickrecord">setting_checkboxpreference_longclickrecord</string>
    <!-- 长按录音 -->

    <string name="entryvalues_list_preference_default">0</string>
    <string name="fontsizevalues_list_preference_default">2</string>
    <string name="main_tab_set">设置</string>
    <string name="main_tab_ck">我的辞库</string>
    <string name="main_tab_fy">语音翻译</string>
    <string name="main_tab_qa">友缘问答</string>
    <string name="main_tts_cancel">取消TTS</string>
    <string name="main_tts_error">获取TTS网络错误</string>
    <string name="main_msg_tip">新消息</string>
    <string name="qa_tab_wdxx">我的信息</string>
    <string name="qa_tab_wdjl">问答记录</string>
    <string name="qa_tab_hylb">好友列表</string>
    <string name="qa_ask_btn_post">提交</string>
    <string name="qa_ask_btn_cancel">取消</string>
    <string name="qa_ask_title">提问</string>
    <string name="qa_ask_input_tip">输入提问内容：</string>
    <string name="qa_solve_title">解答提问</string>
    <string name="qa_msg_btn_add_friend">加为好友</string>
    <string name="main_menu_exit">退出</string>
    <string name="waitting_btn_cancel">取消</string>
    <string name="trans_share_send">分享</string>
    <string name="trans_share_fullscreen">全屏</string>
    <string name="trans_share_copy">复制</string>
    <string name="trans_share_collect">添加到收藏</string>
    <string name="trans_share_delete">删除</string>
    <string name="trans_share_clear">删除全部</string>
    <string name="trans_share_title">选择</string>
    <string name="trans_btn_record">点击说话</string>
    <string name="trans_btn_cancel">取消</string>
    <string name="qa_user_name">我的昵称: </string>
    <string name="qa_ask_count">提问数量: </string>
    <string name="qa_solve_count">回答数量: </string>
    <string name="qa_msg_menu_clear">清空记录</string>
    <string name="qa_btn_solve">我要回答</string>
    <string name="qa_btn_ask">我要提问</string>
    <string name="qa_lable_ask">我的提问</string>
    <string name="qa_lable_solve">我的回答</string>
    <string name="qa_msg_firend_title">好友消息</string>
    <string name="qa_msg_ask_title">我的提问</string>
    <string name="qa_msg_ask_off_title">我的提问(关闭)</string>
    <string name="friend_delete_tip">删除好友</string>
    <string name="qa_msg_solve_title">我的回答</string>
    <string name="qa_msg_solve_off_title">我的回答(放弃)</string>
    <string name="qa_msg_download_error">网络连接出错</string>
    <string name="qa_add_friend_ok">添加好友成功</string>
    <string name="qa_add_friend_fail">添加好友失败</string>
    <string name="help_title">帮助</string>
    <string name="dictionary_result_title">搜索结果</string>

    <!-- 无结果提示 -->
    <string name="dictionary_noresult">--- 无结果 ---</string>

    <!-- 数据库版本控制 -->
    <string name="database_minversions">2012100901</string>
    <string name="database_currentversions">2012100901</string>
    <string name="database_maxversions">2012100901</string>

    <!-- 我的词库 第一级 -->
    <string name="categroy_collector">我的收藏</string>
    <string name="categroy_record">口译记录</string>

    <!-- modified by zengsonghai 2012-10-26-start -->
    <string name="takePhotos">拍照</string>
    <string name="storage_image">手机图片</string>
    <string name="image_select_title">选择图片</string>
    <string name="OK_Txt">确定</string>
    <string name="CANCEL_Txt">取消</string>
    <string name="hint">提示</string>
    <string name="unableToGetResource">当前系统未装载SD卡，无法获取图片资源！</string>
    <string name="setHeadImg">设置头像</string>
    <string name="loading">正在努力连接服务器…</string>
    <string name="cancelnet">用户取消</string>
    <string name="playererror">播放错误</string>
    <string name="userGiveUpQuestion">问题已放弃</string>

    <!-- modified by zengsonghai 2012-10-26-end -->

    <string name="voice_input_hint"> 可以录入语音</string>
    <string name="qa_solve_giveup">放弃</string>
    <string name="qa_solve_solve">回应</string>
    <string name="trans_userpropose_title">意见反馈</string>
    <string name="trans_userpropose_str">输入您的意见：</string>

    <!-- 翻译界面pop菜单 -->
    <string name="pop_intrpt_good">赞</string>
    <string name="pop_intrpt_bad">踩</string>
    <string name="pop_intrpt_copy">复制</string>
    <string name="pop_intrpt_full">全屏</string>
    <string name="pop_intrpt_more">更多</string>

    <!-- 微博 -->
    <string name="unbindertencent">您确定取消腾讯微博账号绑定？</string>
    <string name="unbindersina">您确定取消新浪微博账号绑定？</string>
    <string name="unbinderrenren">您确定取消人人微博账号绑定？</string>
    <string name="unbinderkaixin">您确定取消开心微博账号绑定？</string>
    <string name="bindersuccess">绑定成功</string>
    <string name="binderfailed">绑定失败</string>
    <string name="tencentsharedfailed">腾讯微博分享处理失败</string>
    <string name="sharedfailed">分享失败！</string>
    <string name="setNickName">设置昵称</string>
    <string name="bindercount">账户绑定</string>
    <string name="sina_binder">新浪微博账户绑定</string>
    <string name="tencent_binder">腾讯微博账户绑定</string>
    <string name="sohu_binder">搜狐微博账户绑定</string>
    <string name="renren_binder">人人微博账户绑定</string>
    <string name="kaixin_binder">开心微博账户绑定</string>
    <string name="de_sina_binder">取消新浪微博账户绑定</string>
    <string name="de_tencent_binder">取消腾讯微博账户绑定</string>
    <string name="de_sohu_binder">取消搜狐微博账户绑定</string>
    <string name="de_renren_binder">取消人人微博账户绑定</string>
    <string name="de_kaixin_binder">取消开心微博账户绑定</string>
    <string name="tip">提示</string>
    
    
    
    <string name="activity_sample_code">开心网接口Demo</string>
    <string name="title_getuserinfo">获取我的用户信息</string>
    <string name="title_postrecord">发表记录</string>
    <string name="tv_nouserinfo">返回的用户信息为空</string>
    <string name="title_getfriendlist">获取开心网好友列表</string>
    <string name="tv_nofriend">返回的好友列表为空</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="online">在线</string>
    <string name="offline">不在线</string>
    <string name="downloading">正在下载...</string>
    <string name="uploading">正在上传...</string>
    <string name="post_record_empty_content">请输入内容</string>
    <string name="post_record_success">记录发表成功...</string>
    <string name="post_record_fail">记录发表失败...</string>
    <string name="loading_photo">正在加载图片...</string>
    <string name="getting_logged_in_user">正在获取用户UID...</string>
    <string name="task_failed">请求的任务失败</string>
    <string name="task_failed_arg_err">传入的参数错误，请检查代码</string>
    <string name="task_failed_network_err">网络错误，请重试</string>
    <string name="task_cancel_auth_success">取消授权成功</string>
    <string name="task_failed_class_cast_err">Java换型错误，请检查代码</string>
    <string name="task_failed_json_parse_err">JSON解析错误，请检查代码</string>
    <string name="task_failed_malformed_url_err">错误的 URL,请检查请求的URL</string>
    <string name="task_failed_encoder_err">字符串转换失败，请检查代码</string>
    <string name="json_upload_photo_result">返回结果(JSON格式)</string>
    <string name="fenxiang">好用的口语翻译帮手，来http://t.cn/zlWu5Qe 免费下载吧(来自@紫冬口译)</string>
    <string name="is_exit">是否退出？</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="cancle_oauth">取消授权</string>

    <string name="userpropose_success">感谢您对紫冬口译的支持</string>
    <string name="weibo_contentlength">140</string>
    
    
    <!-- 微信插件 -->
    <string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
</resources>