<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/trans_cen_bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/qa_view_title_bar"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tvQuestionTitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/trans_userpropose_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="5dp" >

            <Button
                android:id="@+id/btn_msg_info_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/trans_userpropose_str"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF000000"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/layoutSender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/qa_view_bottom_bar"
        android:paddingLeft="3dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnSpeak"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/qa_btn_input_voice" />

            <Button
                android:id="@+id/btnChOrEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/qa_btn_z_f"
                android:gravity="center"
                android:textColor="#FFFFFFFF"
                android:textSize="17sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/editMsg"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/voice_input_hint"
                android:lines="3"
                android:maxLines="3"
                android:singleLine="false" >
            </EditText>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dip"
            android:background="@drawable/com_button"
            android:text="@string/qa_ask_btn_post"
            android:textColor="#FFFFFFFF"
            android:paddingLeft="25dip"
        	android:paddingRight="25dip"
        	android:paddingTop="5dip"
        	android:paddingBottom="5dip"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/trans_btn_binder"
            android:text="@string/qa_ask_btn_cancel"
            android:textColor="#FFFFFFFF"
            android:paddingLeft="20dip"
        	android:paddingRight="20dip"
        	android:paddingTop="5dip"
        	android:paddingBottom="5dip"
            android:visibility="gone" 
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>